# armory

./: Cargo.toml  README.md  armory.toml  justfile
bootstrap/: install.ps1  install.sh
cli/: Cargo.toml
cli/src/: cache.rs  client.rs  config.rs  dirs.rs  install_manifest.rs  main.rs  manifest.rs  package_manifest.rs  target.rs
model/: Cargo.toml
model/src/: lib.rs
registry/: Cargo.toml
registry/src/: main.rs
src/: main.rs
