[package]
name = "armory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "armory"
path = "./src/bin/cli/main.rs"

[[bin]]
name = "armory-registry"
path = "./src/bin/registry/main.rs"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
