[package]
name = "armory"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
colored.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
model = { path = "../model" }
reqwest.workspace = true
serde.workspace = true
