[package]
name = "armory"
version = "0.2.1"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer = "0.11.0"
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
model = { path = "../model" }
reqwest.workspace = true
serde.workspace = true
thiserror = "1.0.63"
toml = "0.8.19"
