[package]
name = "armory-registry"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
dirs.workspace = true
model = { path = "../model" }
serde.workspace = true
sha2 = "0.10.8"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
